<resources>
    <string name="app_name">Medlife</string>
    <string name="acessar">Acessar</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="logar">Logar</string>
    <string name="title_activity_empresa">EmpresaActivity</string>
    <string name="continuar_com_facebook">Continuar com Facebook</string>
    <string name="continuar_com_google">Continuar com Google</string>
    <string name="ou_conectar_com_m_dia_social">Ou conectar com Mídia Social</string>
    <string name="esqueceu_senha">Esqueceu senha?</string>
    <string name="receba_seus_rem_dios_sem_sair_de_casa">Receba seus remédios sem sair de casa!</string>
    <string name="registrar_se">Registrar-se</string>
    <string name="entrar_com_medlife">Entrar com MedLife</string>
    <string name="sempre_que_precisar_estarei_l_medlife_cuidando_do_seu_bem_estar">Sempre que precisar estarei lá, MedLife cuidando do seu bem estar!</string>
    <string name="politica_de_privacidade">Ao continuar, você concorda com nosso <font fgcolor='#1E56A0'>Termos de Serviço</font> e <font fgcolor='#1E56A0'>Política de Privacidade</font></string>
    <string name="j_possui_conta">Já possui conta? <font fgcolor='#1E56A0'>Entrar</font></string>
    <string name="nome_completo">Nome Completo</string>
    <string name="digite_suas_informa_es_para_continuar">Digite suas informações para continuar</string>
    <string name="carrinho">Carrinho</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="in_cio">Início</string>
    <string name="perfil">Perfil</string>
    <string name="novo_produto">Novo Produto</string>
    <string name="configura_es">Configurações</string>
    <string name="sair">Sair</string>
    <string name="favorito">Favorito</string>
    <string name="default_web_client_id">727714709876-2hc54lir19914kb8qft75jkn4eom76jt.apps.googleusercontent.com</string>
    <string name="bem_vindo_a">Bem-vindo(a)!</string>
    <string name="home_screen_content">Home Screen Content</string>
    <string name="cidade">Cidade</string>
    <string name="bairro">Bairro</string>
    <string name="estado">Estado</string>
    <string name="logradouro">Logradouro</string>
    <string name="cep">CEP</string>
    <string name="meus_endere_os">Meus Endereços</string>
    <string name="complemento">Complemento</string>
    <string name="adicionar_endere_o">Adicionar Endereço</string>
    <string name="nenhum_endere_o_cadastrado">Nenhum endereço cadastrado</string>
    <string name="n_mero">Número</string>
    <string name="pedidos">Pedidos</string>
    <string name="meus_dados">Meus dados</string>
    <string name="enderecos">Endereços</string>
    <string name="carteira">Carteira</string>
    <string name="cupons">Cupons</string>
    <string name="notificacoes">Notificações</string>
    <string name="ajuda">Ajuda</string>
    <string name="sobre">Sobre</string>
    <string name="carrinho_vazio">Seu carrinho está vazio</string>
    <string name="adicione_produtos_ao_carrinho">Adicione produtos ao seu carrinho</string>
    <string name="total">Total</string>
    <string name="finalizar_compra">Finalizar Compra</string>
    <string name="editar_endere_o">Editar Endereço</string>
    <string name="excluir_endere_o">Excluir Endereço</string>
    <string name="ocultar_formul_rio">Ocultar Formulário</string>
    <string name="adicionar_novo_endere_o">Adicionar Novo Endereço</string>
    <string name="salvar_altera_es">Salvar Alterações</string>
    <string name="telefone">Telefone</string>
    <string name="data_de_nascimento">Data de Nascimento</string>
    <string name="cpf">CPF</string>
    <string name="genero">Gênero</string>
    <string name="salvar">Salvar</string>
    <string name="editar_dados">Editar Dados</string>
    <string name="outro_genero_opcional">Outro Gênero (Opcional)</string>
    <string name="remover_dos_favoritos">Remover dos favoritos</string>
    <string name="nome_do_produto">Nome do produto</string>
    <string name="descri_o_do_produto">Descrição do produto</string>
</resources>